# SWP_sport_back

./: .editorconfig  .gitignore  LICENSE  README.md  StudentsWithSportType.csv  package.json  setup_sport_database.sh
adminpage/: Dockerfile  backup.json  conftest.py  constraints.sql  manage.py  pyproject.toml  pytest.ini  requirements.txt
adminpage/accounts/: models.py
adminpage/accounts/migrations/: 0001_initial.py  0002_auto_20210113_1406.py  0003_user_role.py  0004_auto_20210610_2308.py  0005_user_telegram_id.py
adminpage/adminpage/: apps.py  asgi.py  authentication.py  settings.py  swagger.py  urls.py  wsgi.py
adminpage/api/: permissions.py  urls.py
adminpage/api/crud/: __init__.py  crud_attendance.py  crud_enrolled.py  crud_faq.py  crud_fitness_test.py  crud_groups.py  crud_measurement.py  crud_medical_groups.py  crud_schedule.py  crud_semester.py  crud_training.py  crud_users.py  utils.py
adminpage/api/fixtures/: model_creation.py  user_creation.py
adminpage/api/serializers/: __init__.py  attendance.py  calendar.py  common.py  enroll.py  fitness_test.py  group.py  measurement.py  medical_groups.py  profile.py  reference.py  self_sport_report.py  semester.py  sport.py  student.py  tmp.py  training.py
adminpage/bot/: authentication.py  urls.py  views.py
adminpage/media/: urls.py  views.py
adminpage/sport/: admin.py  apps.py  context_processors.py  signals.py  urls.py  utils.py  views.py
adminpage/training_suggestor/: __init__.py  admin.py  algo.py  apps.py  enums.py  models.py  serializers.py  site.py  urls.py  utils.py  views.py
compose/: .env  (+10 more)
(+551 files in other folders)
