[tool.poetry]
name = "adminpage"
version = "0.1.0"
description = ""
authors = ["fi_van"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.0"
pyjwt = "2.4.0"
django-admin-autocomplete-filter = "^0.7.1"
drf-yasg = "^1.21.8"
openpyxl = "^3.1.5"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-freezegun = "^0.4.2"
pillow = "^11.0.0"
uvicorn = "^0.32.1"
django-import-export = "^4.3.1"
django-image-optimizer = "^1.0.3"
django-admin-rangefilter = "^0.13.2"
sentry-sdk = "^2.19.0"
django-revproxy = "^0.13.0"
django-sendfile2 = "^0.7.1"
django-prometheus = "^2.3.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
django-smartfields = { git = "https://github.com/ViniciusBernardo/django-smartfields.git", branch = "master" }
django-hijack = "^3.7.0"
django-tinymce = "^4.1.0"
django-auth-adfs = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
